src/tests/snapshots/amber__tests__translating__sub_num_expression.ab__bash-3.2.snap
---
source: src/tests/translating.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            Log(
                LogFragment {
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN { print ARGV[1]",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "-",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2] }'",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "21.2",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "7.3",
                                                with_condition: false,
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                            with_condition: false,
                        },
                    ),
                },
            ),
            Log(
                LogFragment {
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN { print ARGV[1]",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "-",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2] }'",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                                with_condition: false,
                                            },
                                        ),
                                        Subprocess(
                                            SubprocessFragment {
                                                fragment: List(
                                                    ListFragment {
                                                        values: [
                                                            Raw(
                                                                RawFragment {
                                                                    value: "awk 'BEGIN { print ARGV[1]",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "-",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "ARGV[2] }'",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "2.32",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "1.12",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                        ],
                                                        separator: Empty,
                                                    },
                                                ),
                                                quoted: true,
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "3.32",
                                                with_condition: false,
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                            with_condition: false,
                        },
                    ),
                },
            ),
            Log(
                LogFragment {
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN { print ARGV[1]",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "-",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2] }'",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                                with_condition: false,
                                            },
                                        ),
                                        Subprocess(
                                            SubprocessFragment {
                                                fragment: List(
                                                    ListFragment {
                                                        values: [
                                                            Raw(
                                                                RawFragment {
                                                                    value: "awk 'BEGIN { print ARGV[1]",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "-",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "ARGV[2] }'",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "1.5",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "3.5",
                                                                    with_condition: false,
                                                                },
                                                            ),
                                                        ],
                                                        separator: Empty,
                                                    },
                                                ),
                                                quoted: true,
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                                with_condition: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "2.5",
                                                with_condition: false,
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                            with_condition: false,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
